# vk_viewer

./: .gitignore  Cargo.toml  README.md  build.rs  build_shaders.bat  debugging.rdbg  device_info.txt  imgui.ini  master.py  run_from_cmd.bat  todo.txt  vulkan_physical_device_info.txt
data/models/: dragon.ozy  gold_sphere.glb  shiba.glb  sphere.ozy  totoro.ozy  totoro_backup.glb
data/shaders/: atmosphere.fs.spv  atmosphere.vs.spv  imgui.fs.spv  imgui.vs.spv  main.fs.spv  main.vs.spv  main_vert.spv  terrain.fs.spv
data/textures/: Bryant_Park.ibl  Bryant_Park_Env.hdr  billboard_grass.dds  moon_color.dds  pack_metallic_roughness.py  sunview_gradient.dds  sunzenith_gradient.dds  viewzenith_gradient.dds
data/textures/rocky_ground/: pack_metallic_roughness.py
data/textures/steel_plate/: pack_metallic_roughness.py
shaders/: imgui_frag.spv  imgui_vert.spv  main_frag.spv  main_vert.spv
src/: asset.rs  dllr.rs  dlr.rs  gltfutil.rs  gui.rs  input.rs  main.rs  physics.rs  render.rs  routines.rs  structs.rs  vkutil.rs
src/render/: atmosphere.rs  mod.rs  structs.rs  vkdevice.rs
src/shaders/: atmosphere.fs  atmosphere.slang  atmosphere.vs  bloom.slang  fragment-bindings.slang  frame_uniforms.sl  imgui.fs  imgui.slang  imgui.vs  lighting.slang  lum_binning.slang  main.fs  main.slang  main.vs  material_buffer.sl  model_fragment.slang  model_vertex.slang  pbr_metallic_roughness.slang  postfx.slang  routines.slang  shadow.slang  shadow_vertex.hlsl  shadow_vertex.slang  structs.slang  terrain_fragment.slang  vertex-bindings.slang
src/shaders/bindings/: frame-uniforms.slang  global-textures.slang  imgui-vertices.slang  instance-buffer.slang  material-buffer.slang  vertex-bindings.slang
src/shaders/fragment/: atmosphere.fs  imgui.fs  main.fs  pbr.fs  terrain.fs
src/shaders/postfx/: postfx_vertex.slang
src/shaders/vertex/: atmosphere.vs  imgui.vs  main.slang  main.vs
