[package]
name = "vk_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ozy_engine = { path = "../ozy_engine" }
nalgebra-glm = "0.16.0"
tinyfiledialogs = "3.9.0"

[dependencies.ash]
version = "0.36.0"
features = ["linked"]

[dependencies.sdl2]
version = "0.35.2"
features = ["bundled", "mixer", "raw-window-handle"]