[package]
name = "vk_viewer"
version = "0.1.20"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.master]
inherits = "release"
#strip = true
#incremental = false
#debug = false
#panic = "abort"
#lto = true
#opt-level = 3

[profile.release]
lto = false
strip = false
incremental = true

[profile.dev.package.rapier3d]
opt-level = 3

[dependencies]
ozy_engine = { path = "../ozy_engine" }
gltf = "1.0.0"
gpu-allocator = "0.17.0"
imgui = "0.10.0"
nalgebra-glm = "0.17.0"
noise = "0.7.0"
png = "0.17.5"
tinyfiledialogs = "3.9.0"
rapier3d = "0.14.0"
slotmap = "1.0"
ispc-texcomp = "0.1.20"
function_name = "0.3.0"
bsod = "0.1.1"

[dependencies.ash]
version = "0.36.0"
features = ["linked"]

[dependencies.sdl2]
version = "0.35.2"
features = ["bundled", "mixer", "raw-window-handle"]